v8.31 fix Show All Results button clipping
- Set top padding to 0 on .btn.all-results span to prevent cutoff

--- a/asae-explore.css
+++ b/asae-explore.css
@@ -513,7 +513,7 @@ a#asae-eb-join-button:hover {
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 1px;
-    padding: 0.75em 1.5em;
+    padding: 0em 1.5em 0.75em 1.5em !important;
 }
 #asae-eb-modal-search #global-autocomplete-container .btn.all-results:hover span {
     background-color: #000;
